// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Todo
    checked={true}
    removeShoppingItem={[Function]}
    text="text"
    toggleShoppingItem={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Component
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "space-between",
            }
          }
        >
          <Icon
            color="#767676"
            containerStyle={
              Object {
                "paddingRight": 2,
              }
            }
            name="checkbox-marked-outline"
            onPress={[Function]}
            raised={false}
            reverse={false}
            reverseColor="white"
            size={36}
            type="material-community"
            underlayColor="white"
          />
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            onPress={[Function]}
            style={
              Object {
                "fontSize": 18,
                "paddingBottom": 2,
                "paddingTop": 2,
                "textDecorationLine": "line-through",
              }
            }
          >
            text
          </Text>
          <Icon
            color="#767676"
            containerStyle={
              Object {
                "paddingLeft": 5,
              }
            }
            name="close-circle-outline"
            onPress={[Function]}
            raised={false}
            reverse={false}
            reverseColor="white"
            size={36}
            type="material-community"
            underlayColor="white"
          />
        </Component>,
        <Component
          style={
            Object {
              "backgroundColor": "#dddddd",
              "height": 0.5,
            }
          }
        />,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <Icon
              color="#767676"
              containerStyle={
                Object {
                  "paddingRight": 2,
                }
              }
              name="checkbox-marked-outline"
              onPress={[Function]}
              raised={false}
              reverse={false}
              reverseColor="white"
              size={36}
              type="material-community"
              underlayColor="white"
            />,
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              onPress={[Function]}
              style={
                Object {
                  "fontSize": 18,
                  "paddingBottom": 2,
                  "paddingTop": 2,
                  "textDecorationLine": "line-through",
                }
              }
            >
              text
            </Text>,
            <Icon
              color="#767676"
              containerStyle={
                Object {
                  "paddingLeft": 5,
                }
              }
              name="close-circle-outline"
              onPress={[Function]}
              raised={false}
              reverse={false}
              reverseColor="white"
              size={36}
              type="material-community"
              underlayColor="white"
            />,
          ],
          "style": Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "color": "#767676",
              "containerStyle": Object {
                "paddingRight": 2,
              },
              "name": "checkbox-marked-outline",
              "onPress": [Function],
              "raised": false,
              "reverse": false,
              "reverseColor": "white",
              "size": 36,
              "type": "material-community",
              "underlayColor": "white",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "accessible": true,
              "allowFontScaling": true,
              "children": "text",
              "ellipsizeMode": "tail",
              "onPress": [Function],
              "style": Object {
                "fontSize": 18,
                "paddingBottom": 2,
                "paddingTop": 2,
                "textDecorationLine": "line-through",
              },
            },
            "ref": null,
            "rendered": "text",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "color": "#767676",
              "containerStyle": Object {
                "paddingLeft": 5,
              },
              "name": "close-circle-outline",
              "onPress": [Function],
              "raised": false,
              "reverse": false,
              "reverseColor": "white",
              "size": 36,
              "type": "material-community",
              "underlayColor": "white",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "style": Object {
            "backgroundColor": "#dddddd",
            "height": 0.5,
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Component
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
              }
            }
          >
            <Icon
              color="#767676"
              containerStyle={
                Object {
                  "paddingRight": 2,
                }
              }
              name="checkbox-marked-outline"
              onPress={[Function]}
              raised={false}
              reverse={false}
              reverseColor="white"
              size={36}
              type="material-community"
              underlayColor="white"
            />
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              onPress={[Function]}
              style={
                Object {
                  "fontSize": 18,
                  "paddingBottom": 2,
                  "paddingTop": 2,
                  "textDecorationLine": "line-through",
                }
              }
            >
              text
            </Text>
            <Icon
              color="#767676"
              containerStyle={
                Object {
                  "paddingLeft": 5,
                }
              }
              name="close-circle-outline"
              onPress={[Function]}
              raised={false}
              reverse={false}
              reverseColor="white"
              size={36}
              type="material-community"
              underlayColor="white"
            />
          </Component>,
          <Component
            style={
              Object {
                "backgroundColor": "#dddddd",
                "height": 0.5,
              }
            }
          />,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <Icon
                color="#767676"
                containerStyle={
                  Object {
                    "paddingRight": 2,
                  }
                }
                name="checkbox-marked-outline"
                onPress={[Function]}
                raised={false}
                reverse={false}
                reverseColor="white"
                size={36}
                type="material-community"
                underlayColor="white"
              />,
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                onPress={[Function]}
                style={
                  Object {
                    "fontSize": 18,
                    "paddingBottom": 2,
                    "paddingTop": 2,
                    "textDecorationLine": "line-through",
                  }
                }
              >
                text
              </Text>,
              <Icon
                color="#767676"
                containerStyle={
                  Object {
                    "paddingLeft": 5,
                  }
                }
                name="close-circle-outline"
                onPress={[Function]}
                raised={false}
                reverse={false}
                reverseColor="white"
                size={36}
                type="material-community"
                underlayColor="white"
              />,
            ],
            "style": Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "space-between",
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "color": "#767676",
                "containerStyle": Object {
                  "paddingRight": 2,
                },
                "name": "checkbox-marked-outline",
                "onPress": [Function],
                "raised": false,
                "reverse": false,
                "reverseColor": "white",
                "size": 36,
                "type": "material-community",
                "underlayColor": "white",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "accessible": true,
                "allowFontScaling": true,
                "children": "text",
                "ellipsizeMode": "tail",
                "onPress": [Function],
                "style": Object {
                  "fontSize": 18,
                  "paddingBottom": 2,
                  "paddingTop": 2,
                  "textDecorationLine": "line-through",
                },
              },
              "ref": null,
              "rendered": "text",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "color": "#767676",
                "containerStyle": Object {
                  "paddingLeft": 5,
                },
                "name": "close-circle-outline",
                "onPress": [Function],
                "raised": false,
                "reverse": false,
                "reverseColor": "white",
                "size": 36,
                "type": "material-community",
                "underlayColor": "white",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "style": Object {
              "backgroundColor": "#dddddd",
              "height": 0.5,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`renders correctly 2`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Todo
    checked={false}
    removeShoppingItem={[Function]}
    text="text"
    toggleShoppingItem={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Component
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "space-between",
            }
          }
        >
          <Icon
            color="#767676"
            containerStyle={
              Object {
                "paddingRight": 2,
              }
            }
            name="checkbox-blank-outline"
            onPress={[Function]}
            raised={false}
            reverse={false}
            reverseColor="white"
            size={36}
            type="material-community"
            underlayColor="white"
          />
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            onPress={[Function]}
            style={
              Object {
                "fontSize": 18,
                "paddingBottom": 2,
                "paddingTop": 2,
              }
            }
          >
            text
          </Text>
          <Icon
            color="#767676"
            containerStyle={
              Object {
                "paddingLeft": 5,
              }
            }
            name="close-circle-outline"
            onPress={[Function]}
            raised={false}
            reverse={false}
            reverseColor="white"
            size={36}
            type="material-community"
            underlayColor="white"
          />
        </Component>,
        <Component
          style={
            Object {
              "backgroundColor": "#dddddd",
              "height": 0.5,
            }
          }
        />,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <Icon
              color="#767676"
              containerStyle={
                Object {
                  "paddingRight": 2,
                }
              }
              name="checkbox-blank-outline"
              onPress={[Function]}
              raised={false}
              reverse={false}
              reverseColor="white"
              size={36}
              type="material-community"
              underlayColor="white"
            />,
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              onPress={[Function]}
              style={
                Object {
                  "fontSize": 18,
                  "paddingBottom": 2,
                  "paddingTop": 2,
                }
              }
            >
              text
            </Text>,
            <Icon
              color="#767676"
              containerStyle={
                Object {
                  "paddingLeft": 5,
                }
              }
              name="close-circle-outline"
              onPress={[Function]}
              raised={false}
              reverse={false}
              reverseColor="white"
              size={36}
              type="material-community"
              underlayColor="white"
            />,
          ],
          "style": Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "color": "#767676",
              "containerStyle": Object {
                "paddingRight": 2,
              },
              "name": "checkbox-blank-outline",
              "onPress": [Function],
              "raised": false,
              "reverse": false,
              "reverseColor": "white",
              "size": 36,
              "type": "material-community",
              "underlayColor": "white",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "accessible": true,
              "allowFontScaling": true,
              "children": "text",
              "ellipsizeMode": "tail",
              "onPress": [Function],
              "style": Object {
                "fontSize": 18,
                "paddingBottom": 2,
                "paddingTop": 2,
              },
            },
            "ref": null,
            "rendered": "text",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "color": "#767676",
              "containerStyle": Object {
                "paddingLeft": 5,
              },
              "name": "close-circle-outline",
              "onPress": [Function],
              "raised": false,
              "reverse": false,
              "reverseColor": "white",
              "size": 36,
              "type": "material-community",
              "underlayColor": "white",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "style": Object {
            "backgroundColor": "#dddddd",
            "height": 0.5,
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Component
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
              }
            }
          >
            <Icon
              color="#767676"
              containerStyle={
                Object {
                  "paddingRight": 2,
                }
              }
              name="checkbox-blank-outline"
              onPress={[Function]}
              raised={false}
              reverse={false}
              reverseColor="white"
              size={36}
              type="material-community"
              underlayColor="white"
            />
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              onPress={[Function]}
              style={
                Object {
                  "fontSize": 18,
                  "paddingBottom": 2,
                  "paddingTop": 2,
                }
              }
            >
              text
            </Text>
            <Icon
              color="#767676"
              containerStyle={
                Object {
                  "paddingLeft": 5,
                }
              }
              name="close-circle-outline"
              onPress={[Function]}
              raised={false}
              reverse={false}
              reverseColor="white"
              size={36}
              type="material-community"
              underlayColor="white"
            />
          </Component>,
          <Component
            style={
              Object {
                "backgroundColor": "#dddddd",
                "height": 0.5,
              }
            }
          />,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <Icon
                color="#767676"
                containerStyle={
                  Object {
                    "paddingRight": 2,
                  }
                }
                name="checkbox-blank-outline"
                onPress={[Function]}
                raised={false}
                reverse={false}
                reverseColor="white"
                size={36}
                type="material-community"
                underlayColor="white"
              />,
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                onPress={[Function]}
                style={
                  Object {
                    "fontSize": 18,
                    "paddingBottom": 2,
                    "paddingTop": 2,
                  }
                }
              >
                text
              </Text>,
              <Icon
                color="#767676"
                containerStyle={
                  Object {
                    "paddingLeft": 5,
                  }
                }
                name="close-circle-outline"
                onPress={[Function]}
                raised={false}
                reverse={false}
                reverseColor="white"
                size={36}
                type="material-community"
                underlayColor="white"
              />,
            ],
            "style": Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "space-between",
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "color": "#767676",
                "containerStyle": Object {
                  "paddingRight": 2,
                },
                "name": "checkbox-blank-outline",
                "onPress": [Function],
                "raised": false,
                "reverse": false,
                "reverseColor": "white",
                "size": 36,
                "type": "material-community",
                "underlayColor": "white",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "accessible": true,
                "allowFontScaling": true,
                "children": "text",
                "ellipsizeMode": "tail",
                "onPress": [Function],
                "style": Object {
                  "fontSize": 18,
                  "paddingBottom": 2,
                  "paddingTop": 2,
                },
              },
              "ref": null,
              "rendered": "text",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "color": "#767676",
                "containerStyle": Object {
                  "paddingLeft": 5,
                },
                "name": "close-circle-outline",
                "onPress": [Function],
                "raised": false,
                "reverse": false,
                "reverseColor": "white",
                "size": 36,
                "type": "material-community",
                "underlayColor": "white",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "style": Object {
              "backgroundColor": "#dddddd",
              "height": 0.5,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
